@@ -1,3 +1,6 @@
+	* automated/lisp-tests.el: Fix typo in equalp test.
+	Add more tests of equalp.
+
 2009-11-02  Stephen Turnbull  <stephen@xemacs.org>
 
 	* automated/mule-tests.el (default-process-coding-system):
